apps/nifi/base/nifi-cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: iaas-wcooke-me
    ingress.cilium.io/tls-passthrough: enabled
    forecastle.stakater.com/appName: NiFi Cluster 1
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: Apps
    forecastle.stakater.com/icon: https://nifi-cluster.apps.iaas.wcooke.me/logo.png
    forecastle.stakater.com/network-restricted: "true"
    nginx.org/ssl-services: nifikop
    nginx.org/lb-method: ip_hash
  name: nifi-cluster
spec:
  ingressClassName: cilium
  rules:
  - host: nifi-cluster.apps.iaas.wcooke.me
    http:
      paths:
      - backend:
          service:
            name: nifi-cluster
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nifi-cluster.apps.iaas.wcooke.me
    secretName: nifi-cluster-ingress
